--- a/style/style.css
+++ b/style/style.css
@@ -43,7 +43,7 @@ main .container{
     gap: 1rem;
     padding: 2.5rem 1.5rem;
     border-radius: 8px;
-    width: 800px;
+    max-width: 120vh;
 }
 .tip-percent{
     margin-bottom: 1rem;
